Revise README for clarity and updated information
Updated the README to clarify the purpose and functionality of HammingStore, including benchmarks and usage examples.